name:                mediawiki-parser
version:             0.1.0.0
synopsis:            A Haskell parser for MediaWiki markup
-- description:         
homepage:            http://github.com/bgamari/wikimedia-parser
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.MediaWiki.XmlDump
                       Data.MediaWiki.Markup
  build-depends:       base >=4.9 && <4.13,
                       frisby >= 0.2 && <0.3,
                       bytestring >=0.10 && <0.11,
                       hashable >=1.2 && <2.0,
                       text >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       hexpat >=0.20 &&<0.21
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  main-is:             Test.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base,
                       filepath,
                       text,
                       mediawiki-parser,
                       pretty-show,
                       tasty,
                       tasty-silver
